--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -10,8 +10,8 @@ if (Astro.cookies.has("userData")) {
   const cookie = Astro.cookies.get("userData")
 	if(cookie){
 		datosCookie = JSON.parse(cookie.value);
+    return Astro.redirect(`/dashboard${datosCookie.userid}`);
 	}
-  return Astro.redirect(`/dashboard${datosCookie.userid}`);
 }
 
 ---
@@ -20,7 +20,7 @@ if (Astro.cookies.has("userData")) {
   <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <a href="#" class="flex items-center mb-6 text-5xl font-roboto text-black font-semibold dark:text-white">
-          <img class="h-16 w-auto" src="/public/logoNB.png">  
+          <img class="h-16 w-auto" src="/logoNB.png">  
           MediSim
         </a>
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
@@ -118,7 +118,10 @@ if (Astro.cookies.has("userData")) {
         }
       })
       .then(data => {
-        Cookies.set('userData', JSON.stringify(data));
+        if(data){
+          Cookies.set('userData', JSON.stringify(data));
+          window.location.replace(`/dashboard${data.userid}`);
+        }
       })
       .catch(error => {
         console.error('Error al registrar usuario: ', error);
