--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@
 				<div>
 					<h2 class=" font-extrabold text-xl sm:text-2xl md:text-4xl text-primary ">Medisim<strong class="text-black">VR</strong></h2>
 					<p class="text-base sm:text-lg md:text-xl font-semibold text-gray-700">Reinventado la medicina</p>
-					<a href="profesional" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-blue-400 hover:bg-gradient-to-br
+					<a href="login" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-blue-400 hover:bg-gradient-to-br
 						focus:ring-4 focus:outline-none font-medium rounded-lg text-sm p-1 md:px-5 md:py-2.5 text-center"
 					>
 						Pruebalo gratis ahora
@@ -112,10 +112,10 @@
     <div class="flex flex-col justify-center items-center py-3 bg-secondary text-center">
       <h2 class="text-xl md:text-3xl font-bold mb-4">¡Accede inmediatamente a contenidos de práctica de alta calidad!</h2>
       <p class="text-sm md:text-lg mb-6">Transforma tu aprendizaje médico con MediSim VR. Regístrate ahora y lleva tu educación médica al siguiente nivel.</p>
-      <a href="/profesional" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-blue-400 hover:bg-gradient-to-br
+      <a href="login" class="text-white flex gap-1 justify-center items-center bg-gradient-to-r from-teal-400 to-blue-400 hover:bg-gradient-to-br
         focus:ring-4 focus:outline-none font-medium rounded-lg text-sm p-1.5 md:px-5 md:py-2.5 text-center"
       >
-        Pruebalo gratis ahora
+        Probar ahora
         <svg xmlns="http://www.w3.org/2000/svg"
           width="24" height="24" viewBox="0 0 24 24"
           stroke-width="1.5" stroke="currentColor"
