--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -20,7 +20,7 @@ if (Astro.cookies.has("userData")) {
   <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <a href="#" class="flex items-center mb-6 text-5xl font-roboto text-black font-semibold dark:text-white">
-          <img class="h-16 w-auto" src="/logoNB.png">  
+          <img class="h-16 w-auto" src="/LogoNB.png">  
           MediSim
         </a>
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
