--- a/src/pages/procedures/[name].astro
+++ b/src/pages/procedures/[name].astro
@@ -5,11 +5,7 @@ import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import SideNav from '../../components/SideNav.astro';
 
-let datosCookie:{
-    name: string,
-    type: string,
-    userid: string
-};
+let datosCookie;
 
 if (Astro.cookies.has("userData")) {
 const cookie = Astro.cookies.get("userData")
